DesktopSite/css/style.css
@import url(https://fonts.googleapis.com/css?family=Roboto);
@import url(https://fonts.googleapis.com/css?family=Andada);

.carddemoBasicUsage .card-media {
	background-color: #999999;
}

/*.h2 {
	text-align: center;
    }*/

#leftSide {
	width:25%;
  /*min-width: 325px;*/
  /*width: 25%;*/
  /*overflow: scroll;*/
  height: 100%;
	position: fixed;
	left: 0%;
	top: 20%;
	right: 70%;
	background-color: #FFFFFF;
}

#rightSide {
	float: right;
  /*min-width: 975px;*/
  width: 75%;
  /*overflow: scroll;*/
  height: 100%;
 }

 #cards {
	 overflow: scroll;
	 /*min-width: 325px;*/
	 float: left;
	 /*width: 25%;*/
	 /*overflow: scroll;*/
	 height: 100%;
	 background-color: #FFFFFF;
}

#map {
 height: 100%;
 min-width: 945px;
	/*width: 100%;
	overflow: scroll;
	height: 100%;*/
}

#leftTitle {
	text-align: center;
	background-color: #FFFFFF;

}

}

#tab0{
	text-overflow: ellipsis;
}

#

.btn {
	float: right;
    margin-right: 10px;
    margin-bottom: 10px;
    margin-left: 5px;
    padding: 5px 12px;
    background-color: #f5f5f5;
    line-height: 20px;
    text-decoration: none;
    color: #666;
    font-size: 14px;
    /*font-family: Georgia;*/
    display: inline-block;
    background-image: -webkit-gradient(linear,left top,left bottom,from(#f5f5f5),to(#f1f1f1));
    background-image: -webkit-linear-gradient(top,#f5f5f5,#f1f1f1);
    background-image: -moz-linear-gradient(top,#f5f5f5,#f1f1f1);
    background-image: -o-linear-gradient(top,#f5f5f5,#f1f1f1);
    background-image: -ms-linear-gradient(top,#f5f5f5,#f1f1f1);
    background-image: linear-gradient(top,#f5f5f5,#f1f1f1);
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    border-radius: 3px;
}

.btn:hover,
.btn:active,
.btn:focus {
    background-image: -webkit-gradient(linear,left top,left bottom,from(#f1f1f1),to(#e5e3e3));
    background-image: -webkit-linear-gradient(top,#f1f1f1,#e5e3e3);
    background-image: -moz-linear-gradient(top,#f1f1f1,#e5e3e3);
    background-image: -o-linear-gradient(top,#f1f1f1,#e5e3e3);
    background-image: -ms-linear-gradient(top,#f1f1f1,#e5e3e3);
    background-image: linear-gradient(top,#f1f1f1,#e5e3e3);
}

/*Won's banner*/

#trademark1{
 /*padding-right: 10px;*/
 text-align: center;
 font-family: 'Andada', serif;
 font-size: 2rem;

}

#trademark2{
    font-family: 'Lora', serif;
    color:white;
    font-size:15px;
    padding-right: 15px;
}
.header-div{
    overflow:auto;
    /*background-color: #631919;*/
		background-color: #BB0000;
		width: 100%;


}

.footer-div{
    overflow:auto;
    background-color: #631919;
}
.header-div h1{
    font-family: 'Lora', serif;
    color: white;
    font-size:2rem;
}
.cemvideo {
    padding-right: 15px;
}
.cemvideo a {
    font-family: 'Lora', serif;
    color:white;
    font-size: 15px;
}
.banner-img{
    height:5rem;
    float:left;
		padding-left: 20px;
    /*clear:right;*/
    /*overflow:auto;*/
}


h2{
    color:black;
    font-family: 'Lora', serif;
}

h4{
    font-family: 'Lora', serif;
    color:black;
    font-size:1rem;
}

.nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover {
    color: black;
    cursor: default;
    background-color: #fff;
    border: 1px solid #ddd;
    border-bottom-color: transparent;
    font-weight: bold;
		transition: 0.2s ease;
		overflow: hidden;
	}

.container{
    height: 80%;
    max-width: 100%;
    min-height: 650px;
    font-family: 'Lato';
    position:relative;
}
.clearfix,.col{
    height: 100%;
}

